@@ -4,9 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<title>Flotr: JSON Data Example</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
-		<!--[if IE]><script type="text/javascript" src="../../flotr/prototype/lib/excanvas.js"></script><![endif]-->
-		<script type="text/javascript" src="../../flotr/prototype/lib/prototype-1.6.0.2.js"></script>
-		<script type="text/javascript" src="../../flotr/prototype/flotr.js"></script>
+		<!--[if IE]><script type="text/javascript" src="../../flotr/mootools/lib/excanvas.js"></script><![endif]-->
+		<script type="text/javascript" src="../../flotr/mootools/lib/mootools-release-1.11.js"></script>
+		<script type="text/javascript" src="../../flotr/mootools/flotr.js"></script>
 	</head>
 	<body>
 		
@@ -36,41 +36,36 @@
 }</code></pre>
 			<p>
 			Let me give you one advise about JSON. To make sure you receive the data in the right format, use the Firefox extension <a href="http://www.getfirebug.com" title="Firebug Javascript Debug Extension">Firebug</a>
-			to <code>console.log</code> (print) the response. With Firebug you can examine the Ajax request and it's response.
-			Also, it's worth reading <a href="http://prototypejs.org/learn/json">Introduction to JSON</a> on PrototypeJS.org.					
+			to <code>console.log</code> (print) the response. With Firebug you can examine the Ajax request and it's response.					
 			</p>
 			<p>Finished? Go to the example <a href="index.html" title="Flotr Example Index Page">index page</a> or the <a href="http://www.solutoire.com/flotr/docs/" title="Flotr Documentation Pages">Flotr Documentation Pages</a>.</p>
 			<h2>The Code</h2>
 			<pre><code class="javascript">var f = null;		
-$('json-btn').observe('click', function(){
+$('json-btn').addEvent('click', function(){
 	/**
 	 * The json.txt contains a valid json string. Imagine this string
 	 * is generated by some server-side script.
 	 */
-	new Ajax.Request('json.txt', {
-		method:'get',
-		onSuccess: function(transport){
-			/**
-			 * Parse (eval) the JSON from the server.
-			 */
-			var json = transport.responseText.evalJSON();
-			
-			if(json.series && json.options){
-				/**
-				 * The json is valid! Display the canvas container.
-				 */
-				$('container').setStyle({'display':'block'});
-				
-				/**
-				 * Draw the graph using the JSON data. Of course the
-				 * options are optional.
-				 */
-			    f = Flotr.draw($('container'), json.series, json.options);
+	new Json.Remote(
+		'json.txt',{
+			onComplete: function(json){
+				if(json.series && json.options){
+					/**
+					 * The json is valid! Display the canvas container.
+					 */
+					$('container').setStyle('display','block');
+					
+					/**
+					 * Draw the graph using the JSON data. Of course the
+					 * options are optional.
+					 */
+				    f = Flotr.draw($('container'), json.series, json.options);
+				}
 			}
-			
-		}
-	});
-});</code></pre>
+		}					
+	).send();
+});
+</code></pre>
 			<div id="footer">Copyright &copy; 2008 Bas Wenneker, <a href="http://www.solutoire.com">solutoire.com</a></div>
 		</div>
 		
@@ -78,34 +73,29 @@ $('json-btn').observe('click', function(){
 		
 		<script type="text/javascript">
 			var f = null;		
-			$('json-btn').observe('click', function(){
+			$('json-btn').addEvent('click', function(){
 				/**
 				 * The json.txt contains a valid json string. Imagine this string
 				 * is generated by some server-side script.
 				 */
-				new Ajax.Request('json.txt', {
-					method:'get',
-					onSuccess: function(transport){
-						/**
-						 * Parse (eval) the JSON from the server.
-						 */
-						var json = transport.responseText.evalJSON();
-						
-						if(json.series && json.options){
-							/**
-							 * The json is valid! Display the canvas container.
-							 */
-							$('container').setStyle({'display':'block'});
-							
-							/**
-							 * Draw the graph using the JSON data. Of course the
-							 * options are optional.
-							 */
-						    f = Flotr.draw($('container'), json.series, json.options);
+				new Json.Remote(
+					'json.txt',{
+						onComplete: function(json){
+							if(json.series && json.options){
+								/**
+								 * The json is valid! Display the canvas container.
+								 */
+								$('container').setStyle('display','block');
+								
+								/**
+								 * Draw the graph using the JSON data. Of course the
+								 * options are optional.
+								 */
+							    f = Flotr.draw($('container'), json.series, json.options);
+							}
 						}
-						
-					}
-				});
+					}					
+				).send();
 			});
 		</script>
 		
