@@ -26,6 +26,7 @@
 				<li><a href="mouse-zoom.html">Mouse Zoom Support Example</a></li>
 				<li><a href="negative.html">Negative Value Support Example</a></li>				
 				<li><a href="click-event.html">Click Event Hook Example</a></li>				
+				<li><a href="json-data.html">JSON Request Data Example</a></li>					
 			</ul>
 			
 			<p>Can't find what you're looking for? Check out the <a href="http://www.solutoire.com/flotr/docs/" title="Flotr Documentation">Flotr Documentation</a>.</p>
