@@ -2,6 +2,8 @@
 =========================
  - Added Mootools release.
  - Renamed private function fireSelectedEvent to fireSelectEvent.
+ - Added json example for Prototype.
+ - Added json example for Mootools.
 
 0.1.0 alpha, Feb 27, 2008
 =========================
